[package]
name = "mssql_quick"
version = "1.4.0"
edition = "2021"
authors = ["zomem"]
description = "mssql 数据库快速连接方法"
license = "MIT"
readme = "README.md"
include = ["/src"]
repository = "https://github.com/zomem/mssql_quick"
keywords = ["mssql", "sql"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tiberius = { version = "0.12.2", features = ["chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4.4"
